[project]
name = "dtsa-5511-gans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pydot>=4.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow-datasets>=4.9.9",
    "tensorflow[and-cuda]>=2.19.0",
]
